--- a/html/index.html
+++ b/html/index.html
@@ -1,24 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <title></title>
+    <title>Energia Libre</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/stylecss/style.css">
 </head>
 <body>
+    <!-- Navbar Barra de Navegacion -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class ="container">
+            <a class="navbar-brand" href="#">
+                <i class="fas fa-leaf"></i> Energia Libre
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+
+    <div class="navbar content" id="navbarNav">
+        <ul class="navbar-nav ml">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Acerca de</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Productos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Carrito <i class="fas fa-shopping-cart"></i></a>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+
+<!-- Header -->
+<header class="jumbotron  jumbotron-fluid text-center bg-light text-dark">
+    <div class="conteiner">
+        <h1>Energia Libre - Holistico</h1>
+        <p>Emprendimiento</p>
+    </div>
+</header>
+
+    <!-- Acerca de -->
+    <section id="about" class="container">
+        <h2 class="mb-4">Acerca de Nosotros</h2>
+        <p> <strong> Energia libre </strong>  es un emprendimiento que contiene aromateriapia, venta de productos,
+            Terapias, Sesiones presenc/online, Seminarios, etcetera.
+            Actualmente cuenta con varios locales en lugares de lomas, buenos aires, argentina.
+            Este emprendimiento esta liderado por Monica Cruz.
+    </section>
+
+    <!-- Atributos -->
+
+    <div class="row mt-4">
+        <div class="col-md-4">
+            <div class="about-box p-4 rounded shadow-sm">
+                <i class="fas fa-seedling fa-3x mb-3"></i>
+                <h5>#</h5>
+                <p>#</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="about-box p-4 rounded shadow-sm">
+                <i class="fas fa-leaf fa-3x mb-3"></i>
+                <h5>#</h5>
+                <p>#</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="about-box p-4 rounder shadow-sm">
+                <i class="fas fa-heart fa-3x"></i>
+                <h5>#</h5>
+                <p>#</p>
+            </div>
+        </div>
+    </div>
+
+<!-- Productos -->
+<section class="container my-5">
+    <h2 class="text-center mb-4">Nuestros Productos</h2>
+    <div class="row">
+    <!-- Producto 1 -->
+    <div class="col-md-4">
+        <div class="card product-card shadow-sm animate-product">
+            <img src="../assets/img1.png" class="card-img-top" alt="#">
+        <div class="card-body">
+            <h5 class="card-title">Jabones</h5>
+            <p class="card-text">Jabones con ingredientes puros y artesanales</p>
+            <a href="#" class="btn btn-primary btn-block">Agregar al carrito</a>
+        </div>
+        </div>
+    </div>
+    <!-- Producto 2 -->
+    <div class="col-md-4">
+        <div class="card product-card shadow-sm animate-product">
+            <img src="../assets/img2.png" class="card-img-top" alt="#">
+        <div class="card-body">
+            <h5 class="card-title">Aguas Florales</h5>
+            <p class="card-text">de rosas, micelar y azahar</p>
+            <a href="#" class="btn btn-primary btn-block">Agregar al carrito</a>
+        </div>
+        </div>
+    </div>
+    <!-- Producto 3 -->
+    <div class="col-md-4">
+        <div class="card product-card shadow-sm animate-product">
+            <img src="../assets/img3.png" class="card-img-top" alt="#">
+            <div class="card-body">
+            <h5 class="card-title">Mascaras</h5>
+            <p class="card-text">Mascaras de arcilla</p>
+            <a href="#" class="btn btn-primary btn-block">Agregar al carrito</a>
+            </div>
+        </div>
+        </div>
+    </div>
+</section>
+<!--Contacto-->
+<section class="container my-5">
+    <h2 class="text-center mb-4">Contactanos</h2>
+    <form action="">
+        <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <input type="text" class="form-control" id="nombre" placeholder="TU NOMBRE">
+        </div>
+        <div class="form-group">
+            <label for="email">Correo Electronico</label>
+            <input type="text" class="form-control" placeholder="Tu correo electronico">
+        </div>
+        <div class="form-group">
+            <label for="mensaje">Mensaje</label>
+            <textarea name="form-control" id="mensaje" cols="10" rows="4" placeholder="Escribe tu mensaje"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Enviar</button>
+    </form>
+</section>
+<!--Footer-->
+<footer class="bg-dark text-white text-center py-4">
+    <div class="conteiner">
+        <p>Seguinos en nuestras redes sociales</p>
+        <a href="#" class="text-white mr-3"> <i class="fab fa-facebook fa-2x"></i></a>
+        <a href="#" class="text-white mr-3"> <i class="fab fa-instagram fa-2x"></i></a>
+        <a href="#" class="text-white mr-3"> <i class="fab fa-twitter fa-2x"></i></a>
+    </div>
+</footer>
 
 
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
-
-    <!--js - jquery-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-    
 </body>
 </html>
