--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,19 @@
         </ul>
 
     </div>
+
+    <!-- selector de idiomas -->
+    <div class="d-flex align-items-center">
+        <div class="dropdown me-3">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://flagcdn.com/w40/us.png" alt="English"> <span>English</span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="lenguageDropdown">
+                <li><a class="dropdown-item" href="#" data-lang="en"><img src="https://flagcdn.com/w40/us.png" alt="English"> English</a></li>
+                <li><a class="dropdown-item" href="#" data-lang="es"><img src="https://flagcdn.com/w40/es.png" alt="Español"> Español</a></li>
+            </ul>
+        </div>
+    </div>
 </nav>
 
 <!-- Header -->
@@ -158,10 +171,12 @@
 </footer>
 
 
+
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="../js/stylejs/script.js"></script>
 
 
 </body>
